--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" data-rh="true" />
-  <meta name="title" content="Home" data-rh="true"/>
-  <meta name="description" content="Home" data-rh="true"/>
-  <meta property="og:type" content="website" data-rh="true"/>
-  <meta property="og:url" content="https://test-ogp-lime.vercel.app/collection" data-rh="true"/>
-  <meta property="og:title" content="Home" data-rh="true"/>
-  <meta property="og:description" content="Home" data-rh="true"/>
-  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" data-rh="true"/>
+  <meta name="description" content="Web site created using create-react-app" data-react-helmet="true" />
+  <meta name="title" content="Home" data-react-helmet="true"/>
+  <meta name="description" content="Home" data-react-helmet="true"/>
+  <meta property="og:type" content="website" data-react-helmet="true"/>
+  <meta property="og:url" content="https://test-ogp-lime.vercel.app/collection" data-react-helmet="true"/>
+  <meta property="og:title" content="Home" data-react-helmet="true"/>
+  <meta property="og:description" content="Home" data-react-helmet="true"/>
+  <meta property="og:image" content="https://metatags.io/images/meta-tags.png" data-react-helmet="true"/>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
